# SDLInputManager

./: .build.bat.un~  .gitignore  CMakeLists.txt  README.md  build.bat~  main.cpp  vcpkg.json
demo-app/: CMakeLists.txt  demo_app.cpp  demo_app.h
input-manager/: CMakeLists.txt  Callback.h  Event.h  ICallback.h  InputManager.cpp  InputManager.h  function.h  ifunction.h  input_manager.cpp  input_manager.h
